--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     height: 80px;
     width: 80px;
     border-radius: 66%;
-    box-shadow: inset 5px 5px 3px grey, 5px 5px 3px grey;
+    box-shadow: inset 5px 5px 3px #ce4800, 5px 5px 3px #ce4800;
     border: 8px solid #ff7c35;
     background-color: transparent;
     display: inline-block;
@@ -25,7 +25,7 @@ h1 {
     height: 300px;
     width: 300px;
     border-radius: 66%;
-    box-shadow: inset 5px 5px 3px grey, 5px 5px 3px grey;
+    box-shadow: inset 5px 5px 3px #999900, 5px 5px 3px #999900;
     border: 8px solid yellow;
     background-color: transparent;
     display: inline-block;
@@ -35,7 +35,7 @@ h1 {
     height: 60px;
     width: 60px;
     border-radius: 66%;
-    box-shadow: inset 5px 5px 3px grey, 5px 5px 3px grey;
+    box-shadow: inset 5px 5px 3px black, 5px 5px 3px black;
     border: 8px solid black;
     background-color: transparent;
     display: inline-block;
@@ -46,7 +46,7 @@ h1 {
     height: 75px;
     width: 75px;
     border-radius: 66%;
-    box-shadow: inset 5px 5px 3px grey, 5px 5px 3px grey;
+    box-shadow: inset 5px 5px 3px black, 5px 5px 3px black;
     border: 8px solid black;
     background-color: transparent;
     display: inline-block;
@@ -57,7 +57,7 @@ h1 {
     height: 90px;
     width: 90px;
     border-radius: 66%;
-    box-shadow: inset 5px 5px 3px grey, 5px 5px 3px grey;
+    box-shadow: inset 5px 5px 3px black, 5px 5px 3px black;
     border: 8px solid black;
     background-color: transparent;
     display: inline-block;
@@ -68,7 +68,7 @@ h1 {
     height: 105px;
     width: 105px;
     border-radius: 66%;
-    box-shadow: inset 5px 5px 3px grey, 5px 5px 3px grey;
+    box-shadow: inset 5px 5px 3px black, 5px 5px 3px black;
     border: 8px solid black;
     background-color: transparent;
     display: inline-block;
@@ -79,7 +79,7 @@ h1 {
     height: 120px;
     width: 120px;
     border-radius: 66%;
-    box-shadow: inset 5px 5px 3px grey, 5px 5px 3px grey;
+    box-shadow: inset 5px 5px 3px black, 5px 5px 3px black;
     border: 8px solid black;
     background-color: transparent;
     display: inline-block;
@@ -90,7 +90,7 @@ h1 {
     height: 135px;
     width: 135px;
     border-radius: 66%;
-    box-shadow: inset 5px 5px 3px grey, 5px 5px 3px grey;
+    box-shadow: inset 5px 5px 3px black, 5px 5px 3px black;
     border: 8px solid black;
     background-color: transparent;
     display: inline-block;
