--- a/scss_file.scss
+++ b/scss_file.scss
@@ -1,10 +1,11 @@
 @mixin ring($color, $size) {
   $darken: darken($color, 20%);
+  $border: $size / 15;
   height: $size;
   width: $size;
   border-radius: 66%;
   box-shadow: inset 5px 5px 3px $darken, 5px 5px 3px $darken;
-  border: 8px solid $color;
+  border: $border solid $color;
   background-color: transparent;
   display: inline-block;
 }
